Troca do uso de params para paginação por query, além de ter uma opção padrão, e correção na implementação do documentação do projeto, além da implementação da nova rota de filter para o status do pedido que foi proposto pelo professor.
