# swagger_doc.json
@@ -13,10 +13,20 @@
   "paths": {
     "/install": {
       "get": {
-        "description": "",
+        "tags": [
+          "Install"
+        ],
+        "summary": "Filtra Produtos.",
+        "description": "Essa rota instala o banco de dados.",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Banco de Dados Instalado com Sucesso!",
+            "schema": {
+              "type": "object",
+              "example": {
+                "msg": "Banco de Dados Instalado com Sucesso!"
+              }
+            }
           }
         }
       }
@@ -27,7 +37,7 @@
           "Products"
         ],
         "summary": "Filtra Produtos.",
-        "description": "Essa rota filtra os produtos e os retorna, como um objeto JSON.",
+        "description": "Essa rota filtra os produtos com base na categoria, descrição ou name e os retorna, como um objeto JSON.",
         "parameters": [
           {
             "name": "name",
@@ -58,7 +68,35 @@
         }
       }
     },
-    "/orders/{page}/{limit}": {
+    "/orders/filter/{status}": {
+      "get": {
+        "tags": [
+          "Orders"
+        ],
+        "summary": "Filtra Pedidos.",
+        "description": "Essa rota filtra os pedidos com base no status e os retorna, como um objeto JSON.",
+        "parameters": [
+          {
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Listando Pedidos.",
+            "schema": {
+              "$ref": "#/schemas/array_order"
+            }
+          },
+          "404": {
+            "description": "Nenhum Pedido encontrado!"
+          }
+        }
+      }
+    },
+    "/orders": {
       "get": {
         "tags": [
           "Orders"
@@ -68,14 +106,12 @@
         "parameters": [
           {
             "name": "page",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           },
           {
             "name": "limit",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           }
         ],
@@ -90,9 +126,7 @@
             "description": "Nenhum Pedido encontrado no banco de dados!"
           }
         }
-      }
-    },
-    "/orders": {
+      },
       "post": {
         "tags": [
           "Orders"
@@ -208,7 +242,7 @@
         }
       }
     },
-    "/products/{page}/{limit}": {
+    "/products": {
       "get": {
         "tags": [
           "Products"
@@ -218,14 +252,12 @@
         "parameters": [
           {
             "name": "page",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           },
           {
             "name": "limit",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           }
         ],
@@ -240,9 +272,7 @@
             "description": "Nenhum Produto encontrado no banco de dados!"
           }
         }
-      }
-    },
-    "/products": {
+      },
       "post": {
         "tags": [
           "Products"
@@ -358,7 +388,7 @@
         }
       }
     },
-    "/users/{page}/{limit}": {
+    "/users": {
       "get": {
         "tags": [
           "Users"
@@ -368,14 +398,12 @@
         "parameters": [
           {
             "name": "page",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           },
           {
             "name": "limit",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           }
         ],
